# raytrace

./: .gitignore  CHANGELOG.md  LICENSE  README.md  raytrace.cabal
app/: Main.hs
app/Graphics/: Ray.hs
app/Graphics/Ray/: Core.hs  Geometry.hs  Material.hs  Noise.hs  SceneObject.hs  Texture.hs
src/Graphics/: Ray.hs
src/Graphics/Ray/: Core.hs  Geometry.hs  Material.hs  Noise.hs  Texture.hs
test/: Main.hs
