cabal-version:      3.0
name:               raytrace
version:            0.1.0.0

synopsis:           Ray tracing library
description:        See README.md

license:            BSD-3-Clause
license-file:       LICENSE

author:             Owen Bechtel
maintainer:         ombspring@gmail.com

build-type:         Simple

extra-doc-files:    CHANGELOG.md, README.md

library
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall
    
    exposed-modules:
        Graphics.Ray, 
        Graphics.Ray.Core, 
        Graphics.Ray.Geometry, 
        Graphics.Ray.Texture, 
        Graphics.Ray.Material, 
        Graphics.Ray.Noise

    build-depends:    base ^>=4.17.2.1, linear, massiv, massiv-io, Color, random >= 1.3.0, mtl

test-suite test
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    default-language: Haskell2010
    ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N

    main-is:          Main.hs

    build-depends:    base ^>=4.17.2.1, linear, massiv, massiv-io, Color, random >= 1.3.0, mtl, raytrace