cabal-version:      3.0
name:               raytrace
version:            0.1.0.0

category:           Graphics
synopsis:           Ray tracing library
description:        
    A Haskell ray tracing library. 
    Largely based on the books [Ray Tracing in One Weekend](https://raytracing.github.io/books/RayTracingInOneWeekend.html) 
    and [Ray Tracing: The Next Week](https://raytracing.github.io/books/RayTracingTheNextWeek.html) by Peter Shirley.
    
    See README.md for more information.

license:            BSD-3-Clause
license-file:       LICENSE

author:             Owen Bechtel
maintainer:         ombspring@gmail.com

build-type:         Simple

extra-doc-files:    CHANGELOG.md, README.md

library
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall
    
    exposed-modules:
        Graphics.Ray, 
        Graphics.Ray.Core, 
        Graphics.Ray.Geometry, 
        Graphics.Ray.Texture, 
        Graphics.Ray.Material, 
        Graphics.Ray.Noise

    build-depends:    
        base >= 4.17.2.1 && < 5, 
        linear >= 1.23.2 && < 1.24,
        massiv >= 1.0.5 && < 1.1,
        massiv-io >= 1.0.0 && < 1.1,
        Color >= 0.4.0 && < 0.5, 
        random >= 1.3.0 && < 1.4, 
        mtl >= 2.2.2 && < 2.3

test-suite test
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    default-language: Haskell2010
    ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N

    main-is:          Main.hs

    build-depends:    
        base >= 4.17.2.1 && < 5, 
        linear >= 1.23.2 && < 1.24,
        massiv >= 1.0.5 && < 1.1,
        massiv-io >= 1.0.0 && < 1.1,
        Color >= 0.4.0 && < 0.5, 
        random >= 1.3.0 && < 1.4, 
        mtl >= 2.2.2 && < 2.3, 
        raytrace